--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,10 +1,9 @@
-/* Nav Container */
 nav {
     background: rgba(0, 0, 0, 0.3);
     display: flex;
-    gap: 0.8rem;  /* Reduced the gap between the links */
-    padding: 0.5rem 1.5rem;  /* Reduced padding to make the navbar smaller */
-    border-radius: 2rem;  /* Reduced border-radius to match the smaller size */
+    gap: 0.8rem; 
+    padding: 0.5rem 1.5rem;  
+    border-radius: 2rem;  
     backdrop-filter: blur(15px);
     position: fixed;
     bottom: 2rem;
@@ -13,29 +12,26 @@ nav {
     z-index: 1000;
 }
 
-/* Links Styling */
 nav a {
     background: transparent;
-    padding: 0.7rem 1rem;  /* Reduced padding inside the links */
-    border-radius: 1.5rem;  /* Reduced the border-radius of the links */
+    padding: 0.7rem 1rem; 
+    border-radius: 1.5rem;  
     color: var(--color-light);
-    font-size: 0.9rem;  /* Reduced font size */
+    font-size: 0.9rem; 
     text-transform: uppercase;
     text-decoration: none;
     font-weight: 200;
     transition: background 0.3s ease, color 0.3s ease, font-weight 0.3s ease;
 }
 
-/* Hover Effect */
 nav a:hover {
     background: rgba(255, 255, 255, 0.1);
     color: var(--color-primary);
 }
 
-/* Active Link Styling */
 nav a.active {
     background: var(--color-primary);
     color: var(--color-white);
-    font-weight: bold;  /* This will bold the active section */
+    font-weight: bold; 
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
 }
