--- a/client/src/components/Skills/Skills.css
+++ b/client/src/components/Skills/Skills.css
@@ -34,11 +34,14 @@
   
 .skills__details {
   display: flex;
+  justify-content: center;
+  align-items: center; 
   gap: 1rem;
 }
-  
+
 .skills__details h4 {
   font-size: 1.1rem;
+  text-align: center; 
 }
   
 .skills__details small {
