--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -1,19 +1,10 @@
-.about-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px 20px;
-  text-align: center;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
 .cards-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  margin-top: 40px;
+  gap: 100px; 
+  margin-top: 30px;
+  margin-bottom: 40px;
   width: 100%;
   max-width: 1000px;
 }
@@ -77,7 +68,6 @@
   animation: zoomIn 0.6s ease-out forwards;
 }
 
-/* Responsive design: Stack the image and text on smaller screens */
 .modal-content .left {
   flex: 1;
   padding: 10px;
@@ -163,7 +153,7 @@
   .cards-container {
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 70px;
   }
 
   .card {
