--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -39,8 +39,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -54,8 +54,6 @@
 }
 
 .modal-content {
-  display: flex;
-  flex-direction: row;
   background-color: #ffffff;
   padding: 30px;
   border-radius: 15px;
@@ -63,10 +61,14 @@
   width: 90%;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
   text-align: center;
-  transform: scale(0);
-  opacity: 0;
   animation: zoomIn 0.6s ease-out forwards;
+  border: 3px solid transparent; 
 }
+
+.modal.open .modal-content {
+  border-color: #3498db; 
+}
+
 
 .modal-content .left {
   flex: 1;
