--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Arial', sans-serif;
-  background: linear-gradient(to right, #ece9e6, #ffffff); 
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.7), rgba(233, 233, 233, 0.7));
   color: #333; 
   line-height: 1.6;
   display: flex;
@@ -15,6 +15,7 @@ body {
   align-items: center;
   padding: 20px;
 }
+
 
 h1, h3 {
   color: #2c3e50; 
@@ -112,3 +113,4 @@ section h1, section h2 {
 #contact {
   border-left: 5px solid #9b59b6; 
 }
+
