--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -43,6 +43,7 @@
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
+    height: 5px;
   }
   
   .btn-primary:hover {
