--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -43,10 +43,20 @@
     text-decoration: none;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-    height: 5px;
   }
   
   .btn-primary:hover {
     background-color: #007bff;
+  }
+  
+  .icon {
+    color: #3498db; 
+    font-size: 1.5rem; 
+    margin: 0 10px; 
+    transition: color 0.3s ease;
+  }
+  
+  .icon:hover {
+    color: #007bff;
   }
   
