--- a/src/index.css
+++ b/src/index.css
@@ -98,22 +98,26 @@ section h1, section h2 {
   margin: 5rem 0;
 }
 
+#home {
+  border-left: 5px solid black; 
+}
+
 #about {
   border-left: 5px solid #3498db; 
-  background-color: #eaf6fc; 
+  background-color: #d9edf9;
 }
 
 #projects {
   border-left: 5px solid #e74c3c; 
-  background-color: #fdecea; 
+  background-color: #fadbd8;
 }
 
 #skills {
   border-left: 5px solid #2ecc71; 
-  background-color: #eafaf1;
+  background-color: #d4efdf;
 }
 
 #contact {
   border-left: 5px solid #9b59b6; 
-  background-color: #f4eafc; 
+  background-color: #e8daef;
 }
