--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -135,37 +135,63 @@
   }
 }
 
-/* Responsive adjustments */
-@media screen and (max-width: 768px) {
-  .modal-content {
-    flex-direction: column;
-    align-items: center;
-  }
 
-  .modal-content .left {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .modal-content .right {
-    width: 100%;
-    padding: 10px;
-  }
-
+@media (max-width: 768px) {
+  /* Cards Container */
   .cards-container {
-    flex-direction: column;
-    align-items: center;
-    gap: 70px;
-  }
-
-  .card {
+    gap: 30px; 
+    margin-top: 20px;
+    margin-bottom: 30px;
     width: 100%;
-    max-width: 300px;
+    max-width: 100%;
   }
-}
 
+  /* Individual Card */
+  .card {
+    width: 150px; 
+    padding: 15px; 
+    font-size: 0.9rem; 
+  }
 
-.no-scroll {
-  overflow: hidden; /* Prevent scrolling */
-  height: 100%;     /* Ensure the page doesn't extend */
+  .card h5 {
+    font-size: 1.1rem; 
+  }
+
+  .card p {
+    font-size: 0.9rem;
+  }
+
+  /* Modal */
+  .modal-content {
+    padding: 15px;
+    max-width: 80%; 
+    width: 90%;
+  }
+
+  .modal-content h3 {
+    font-size: 1.4rem;  
+  }
+
+  .modal-content p {
+    font-size: 0.9rem;  
+  }
+
+  /* Modal Close Button */
+  .modal-close {
+    padding: 8px 20px;
+    font-size: 0.9rem;
+  }
+
+  /* Modal Left Section */
+  .modal-content .left {
+    flex: 1;
+    font-size: 1.3rem;
+    padding: 8px;
+  }
+
+  /* Modal Right Section */
+  .modal-content .right {
+    flex: 1.8;
+    padding: 15px;
+  }
 }
