--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,7 +1,7 @@
 nav {
     background: rgba(0, 0, 0, 0.3);
     display: flex;
-    gap: 1.5rem;  /* Adjusted for better spacing */
+    gap: 1.5rem; 
     padding: 0.5rem 1.5rem;  
     border-radius: 2rem;  
     backdrop-filter: blur(15px);
@@ -17,7 +17,7 @@ nav a {
     padding: 0.7rem 1rem; 
     border-radius: 1.5rem;  
     color: var(--color-light);
-    font-size: 1.2rem; /* Adjust size to fit icons well */
+    font-size: 1.2rem;
     text-decoration: none;
     font-weight: 200;
     transition: background 0.3s ease, color 0.3s ease, font-weight 0.3s ease;
@@ -33,4 +33,23 @@ nav a.active {
     color: var(--color-white);
     font-weight: bold; 
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+
+@media (max-width: 768px) {
+    nav {
+        gap: 1rem;
+        padding: 0.5rem 1rem; 
+        bottom: 1rem; 
+        left: 50%; 
+        transform: translateX(-50%); 
+        width: 80%;
+        display: flex; 
+        justify-content: center; 
+    }
+
+    nav a {
+        font-size: 1rem; 
+        padding: 0.4rem 0.8rem; 
+    }
 }
